crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__slice_from_parts_lowers_to_aggregate.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 477
    signature_index: 0
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty:
              Pointer:
                memory: 476
                kind: Memory32
            mutability: Immutable
          - ty: U32
            mutability: Immutable
        result:
          Aggregate:
            aggregate_index: 0
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Aggregate:
                  values:
                    - kind:
                        LocalGet:
                          scope_index: 0
                          local_index: 0
                      ty:
                        Pointer:
                          memory: 476
                          kind: Memory32
                    - kind:
                        LocalGet:
                          scope_index: 0
                          local_index: 1
                      ty: U32
              ty:
                Aggregate:
                  aggregate_index: 0
      ty:
        Aggregate:
          aggregate_index: 0
    static_data: []
signatures:
  - items:
      - Pointer:
          memory: 476
          kind: Memory32
      - U32
      - Aggregate:
          aggregate_index: 0
    params_count: 2
  - items:
      - F32
      - F32
    params_count: 1
  - items:
      - F32
      - F32
      - F32
    params_count: 2
  - items:
      - F32
      - I32
    params_count: 1
  - items:
      - F32
      - U32
    params_count: 1
  - items:
      - I32
      - F32
    params_count: 1
  - items:
      - U32
      - F32
    params_count: 1
  - items:
      - F32
      - F64
    params_count: 1
  - items:
      - F32
      - I64
    params_count: 1
  - items:
      - F32
      - U64
    params_count: 1
  - items:
      - F64
      - F64
    params_count: 1
  - items:
      - F64
      - F64
      - F64
    params_count: 2
  - items:
      - F64
      - I64
    params_count: 1
  - items:
      - F64
      - U64
    params_count: 1
  - items:
      - I64
      - F64
    params_count: 1
  - items:
      - U64
      - F64
    params_count: 1
  - items:
      - F64
      - F32
    params_count: 1
  - items:
      - F64
      - I32
    params_count: 1
  - items:
      - F64
      - U32
    params_count: 1
  - items:
      - I32
      - F64
    params_count: 1
  - items:
      - I32
      - I32
      - I32
    params_count: 2
  - items:
      - I32
      - I32
    params_count: 1
  - items:
      - U32
      - F64
    params_count: 1
  - items:
      - U32
      - U32
      - U32
    params_count: 2
  - items:
      - U32
      - U32
    params_count: 1
  - items:
      - I64
      - F32
    params_count: 1
  - items:
      - I64
      - I64
      - I64
    params_count: 2
  - items:
      - I64
      - I64
    params_count: 1
  - items:
      - U64
      - F32
    params_count: 1
  - items:
      - U64
      - U64
      - U64
    params_count: 2
  - items:
      - U64
      - U64
    params_count: 1
  - items:
      - I8
      - I8
      - I8
    params_count: 2
  - items:
      - I8
      - I8
    params_count: 1
  - items:
      - U8
      - U8
      - U8
    params_count: 2
  - items:
      - U8
      - U8
    params_count: 1
  - items:
      - I16
      - I16
      - I16
    params_count: 2
  - items:
      - I16
      - I16
    params_count: 1
  - items:
      - U16
      - U16
      - U16
    params_count: 2
  - items:
      - U16
      - U16
    params_count: 1
  - items:
      - Bool
      - Bool
      - Bool
    params_count: 2
  - items:
      - U32
      - Bool
    params_count: 1
globals: []
exports:
  - Function:
      id: 477
      name: 247
imports: []
memories:
  - id: 476
    source: Internal
    kind: Memory32
    min_pages: ~
    max_pages: ~
aggregates:
  - fields:
      - ty:
          Pointer:
            memory: 476
            kind: Memory32
        offset: 0
      - ty: U32
        offset: 4
    layout:
      size: 8
      align: 4
    scalars:
      entries:
        - ty:
            Pointer:
              memory: 476
              kind: Memory32
          offset: 0
        - ty: U32
          offset: 4
      field_starts:
        - 0
        - 1
        - 2
    decl_to_phys:
      - 0
      - 1
static_entries: []
start_function: ~
