crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__struct_bitnot_overload_inline_method_is_substituted.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 479
    signature_index: 0
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty:
              Aggregate:
                aggregate_index: 0
            mutability: Immutable
          - ty:
              Aggregate:
                aggregate_index: 0
            mutability: Immutable
          - ty: I32
            mutability: Immutable
        result:
          Aggregate:
            aggregate_index: 0
      - kind: Block
        parent: 0
        locals: []
        result:
          Aggregate:
            aggregate_index: 0
      - kind: Block
        parent: 1
        locals: []
        result: I32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Block:
                  scope_index: 1
                  expressions:
                    - kind:
                        LocalSet:
                          scope_index: 0
                          local_index: 1
                          value:
                            kind:
                              LocalGet:
                                scope_index: 0
                                local_index: 0
                            ty:
                              Aggregate:
                                aggregate_index: 0
                      ty: Unit
                    - kind:
                        Block:
                          scope_index: 0
                          expressions:
                            - kind:
                                Aggregate:
                                  values:
                                    - kind:
                                        Block:
                                          scope_index: 2
                                          expressions:
                                            - kind:
                                                LocalSet:
                                                  scope_index: 0
                                                  local_index: 2
                                                  value:
                                                    kind:
                                                      AggregateGet:
                                                        scope_index: 0
                                                        local_index: 1
                                                        value_index: 0
                                                    ty: I32
                                              ty: Unit
                                            - kind:
                                                Block:
                                                  scope_index: 0
                                                  expressions:
                                                    - kind:
                                                        BitNot:
                                                          value:
                                                            kind:
                                                              LocalGet:
                                                                scope_index: 0
                                                                local_index: 2
                                                            ty: I32
                                                      ty: I32
                                              ty: I32
                                      ty: I32
                              ty:
                                Aggregate:
                                  aggregate_index: 0
                      ty:
                        Aggregate:
                          aggregate_index: 0
              ty:
                Aggregate:
                  aggregate_index: 0
      ty:
        Aggregate:
          aggregate_index: 0
    static_data: []
signatures:
  - items:
      - Aggregate:
          aggregate_index: 0
      - Aggregate:
          aggregate_index: 0
    params_count: 1
  - items:
      - F32
      - F32
    params_count: 1
  - items:
      - F32
      - F32
      - F32
    params_count: 2
  - items:
      - F32
      - I32
    params_count: 1
  - items:
      - F32
      - U32
    params_count: 1
  - items:
      - I32
      - F32
    params_count: 1
  - items:
      - U32
      - F32
    params_count: 1
  - items:
      - F32
      - F64
    params_count: 1
  - items:
      - F32
      - I64
    params_count: 1
  - items:
      - F32
      - U64
    params_count: 1
  - items:
      - F64
      - F64
    params_count: 1
  - items:
      - F64
      - F64
      - F64
    params_count: 2
  - items:
      - F64
      - I64
    params_count: 1
  - items:
      - F64
      - U64
    params_count: 1
  - items:
      - I64
      - F64
    params_count: 1
  - items:
      - U64
      - F64
    params_count: 1
  - items:
      - F64
      - F32
    params_count: 1
  - items:
      - F64
      - I32
    params_count: 1
  - items:
      - F64
      - U32
    params_count: 1
  - items:
      - I32
      - F64
    params_count: 1
  - items:
      - I32
      - I32
      - I32
    params_count: 2
  - items:
      - I32
      - I32
    params_count: 1
  - items:
      - U32
      - F64
    params_count: 1
  - items:
      - U32
      - U32
      - U32
    params_count: 2
  - items:
      - U32
      - U32
    params_count: 1
  - items:
      - I64
      - F32
    params_count: 1
  - items:
      - I64
      - I64
      - I64
    params_count: 2
  - items:
      - I64
      - I64
    params_count: 1
  - items:
      - U64
      - F32
    params_count: 1
  - items:
      - U64
      - U64
      - U64
    params_count: 2
  - items:
      - U64
      - U64
    params_count: 1
  - items:
      - I8
      - I8
      - I8
    params_count: 2
  - items:
      - I8
      - I8
    params_count: 1
  - items:
      - U8
      - U8
      - U8
    params_count: 2
  - items:
      - U8
      - U8
    params_count: 1
  - items:
      - I16
      - I16
      - I16
    params_count: 2
  - items:
      - I16
      - I16
    params_count: 1
  - items:
      - U16
      - U16
      - U16
    params_count: 2
  - items:
      - U16
      - U16
    params_count: 1
  - items:
      - Bool
      - Bool
      - Bool
    params_count: 2
  - items:
      - U32
      - Bool
    params_count: 1
globals: []
exports:
  - Function:
      id: 479
      name: 246
imports: []
memories: []
aggregates:
  - fields:
      - ty: I32
        offset: 0
    layout:
      size: 4
      align: 4
    scalars:
      entries:
        - ty: I32
          offset: 0
      field_starts:
        - 0
        - 1
    decl_to_phys:
      - 0
static_entries: []
start_function: ~
